force-app/main/default/objects/Field_Trip__Field_Analytic_Config__c/Field_Trip__Field_Analytic_Config__c.object-meta.xml
<CustomObject>
    <label>Field Analytic Config</label>
    <nameField>
        <label>Field Analytic Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Analytic Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>