force-app/main/default/objects/Field_Trip__Field_Analytic_Config__c/fields/Field_Trip__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Trip__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>