force-app/main/default/objects/Field_Trip__Field_Analytic_Config__c/fields/Field_Trip__Field_Weight__c.field-meta.xml
<CustomField>
    <fullName>Field_Trip__Field_Weight__c</fullName>
    <label>Field Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>